Basic Character Movement

--- a/ApocalypseShooter.uproject
+++ b/ApocalypseShooter.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "ApocalypseShooter",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	]
 }
